amf-cli/shared/src/test/resources/parser-results/raml/valid/reference-by-id/api.raml
#%RAML 1.0
title: test

/category:
  /{categoryId}:

    get:
      responses:
        200:
          body: 
            application/json:
              type: !include schemas/proc_search_category.schema.json