amf-cli/shared/src/test/resources/parser-results/raml/error/webapi-exclusive-facets.raml
#%RAML 1.0
title: A

schemas:
types: